kubernetes/old/01_deployment.yml
# PODs und Anzahl definieren
# kubectl apply -f deployment.yml;
# kubectl get pod;
# kubectl get deployment;
# kubectl describe pod microservice;
# kubectl describe deployment microservice;
# kubectl delete deployment microservice;
apiVersion: apps/v1
#apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: microservice
    labels:
        app: microservice
spec:
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 1
            maxSurge: 0
    replicas: 3
    minReadySeconds: 30
    selector:
        matchLabels:
            app: microservice
    template:
        metadata:
            name: microservice
            labels:
                app: microservice
        spec:
            containers:
                -   name: microservice
                    image: kubernetes-microservice:latest
                    imagePullPolicy: Never
                    ports:
                        -   containerPort: 8080
                            name: myweb
